// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContainerSlideTransformer > no items in container 1`] = `
[
  {
    "items": [
      {
        "size": {
          "lg": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "md": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "sm": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "xl": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "xs": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
        },
        "type": "IDashboardLayoutItem",
        "widget": {
          "configuration": {},
          "sections": [],
          "size": {
            "xl": {
              "gridHeight": 4,
              "gridWidth": 4,
            },
          },
          "type": "IDashboardLayout",
        },
      },
    ],
    "type": "IDashboardLayoutSection",
  },
]
`;

exports[`ContainerSlideTransformer > simple items in container, keep it as is 1`] = `
[
  {
    "items": [
      {
        "size": {
          "lg": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "md": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "sm": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "xl": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "xs": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
        },
        "type": "IDashboardLayoutItem",
        "widget": {
          "configuration": {},
          "sections": [
            {
              "header": {
                "description": "Description",
                "title": "Title",
              },
              "items": [
                {
                  "size": {
                    "xl": {
                      "gridHeight": 4,
                      "gridWidth": 4,
                    },
                  },
                  "type": "IDashboardLayoutItem",
                  "widget": {
                    "drills": [],
                    "identifier": "test1",
                    "insight": {
                      "identifier": "test1",
                      "type": "insight",
                    },
                    "ref": {
                      "identifier": "test1",
                      "type": "insight",
                    },
                    "type": "insight",
                  },
                },
                {
                  "size": {
                    "xl": {
                      "gridHeight": 4,
                      "gridWidth": 4,
                    },
                  },
                  "type": "IDashboardLayoutItem",
                  "widget": {
                    "drills": [],
                    "identifier": "test2",
                    "insight": {
                      "identifier": "test2",
                      "type": "insight",
                    },
                    "ref": {
                      "identifier": "test2",
                      "type": "insight",
                    },
                    "type": "insight",
                  },
                },
              ],
              "type": "IDashboardLayoutSection",
            },
          ],
          "size": {
            "xl": {
              "gridHeight": 4,
              "gridWidth": 4,
            },
          },
          "type": "IDashboardLayout",
        },
      },
    ],
    "type": "IDashboardLayoutSection",
  },
]
`;

exports[`ContainerSlideTransformer > visualisation switcher item in container, convert to flat 1`] = `
[
  {
    "header": {
      "description": "Description",
      "title": "Title",
    },
    "items": [],
    "type": "IDashboardLayoutSection",
  },
  {
    "items": [
      {
        "size": {
          "lg": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "md": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "sm": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "xl": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "xs": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
        },
        "type": "IDashboardLayoutItem",
        "widget": {
          "size": {
            "xl": {
              "gridHeight": 4,
              "gridWidth": 4,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "drills": [],
            "identifier": "test1",
            "insight": {
              "identifier": "test1",
              "type": "insight",
            },
            "ref": {
              "identifier": "test1",
              "type": "insight",
            },
            "type": "insight",
          },
        },
      },
    ],
    "type": "IDashboardLayoutSection",
  },
  {
    "items": [
      {
        "size": {
          "lg": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "md": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "sm": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "xl": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
          "xs": {
            "gridHeight": 22,
            "gridWidth": 12,
          },
        },
        "type": "IDashboardLayoutItem",
        "widget": {
          "size": {
            "xl": {
              "gridHeight": 4,
              "gridWidth": 4,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "drills": [],
            "identifier": "test2",
            "insight": {
              "identifier": "test2",
              "type": "insight",
            },
            "ref": {
              "identifier": "test2",
              "type": "insight",
            },
            "type": "insight",
          },
        },
      },
    ],
    "type": "IDashboardLayoutSection",
  },
]
`;
